--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -1,18 +1,12 @@
-.form-container{
-    display: grid;
-    place-items: center;
-    min-height: 100vh; 
-
+.form-container {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
 }
-#loginForm{
-    width:40%;
+#loginForm {
+  width: 40%;
 }
-#bannerImage{
-    background-image: url('../assets/maritime-training-academy-banner-1.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width:100%;
-    max-width: 100%;
-
-    height:auto
+#bannerImage {
+  background-image: url("../assets/login-bg-3.jpg");
+  background-size: cover;
 }
