--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -7,6 +7,6 @@
     width:100%;
     will-change: transform, opacity, filter;
     z-index: 0;
-    background: linear-gradient(208.18deg, #51B4F7 9.05%, #5A98F2 76.74%);
+    background: linear-gradient(208.18deg, #51B4F7 9.05%, #284c81 76.74%);
     min-height: 50%;
 }
