--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -1,67 +1,42 @@
-.dropdown {
-    /* Keep the anchor link styles as they are */
-  }
-  
-  .dropdown-menu {
-    /* Increase padding and font size for menu items */
-    padding: 1rem;
-    font-size: 1rem;
-    /* Add a subtle border */
-    border: 1px solid #ddd;
-    
-    /* Add a slight shadow effect */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    
-    /* Increase the minimum width to prevent narrow menus */
-    /* min-width: 150px; */
-    
-    /* Increase the overall height to accommodate more items */
-    /* height: 200px; Adjust as needed */
-    
-    /* Add a background color for visual separation */
-    width: 100%;
-    background: rgba(255, 255, 255, 0.8);
-    top: calc(100% - 2px) !important;
-    backdrop-filter: blur(15px);
-  }
-  
-.jobs-submenu .dropdown-item {
-    /* Increase padding for menu items */
-    margin-bottom:3px;
-    /* Add a hover effect to make menu items more interactive */
-    transition: background-color 0.3s ease-in-out;
-    color:'black'
-  }
-  
-  .dropdown-item:hover {
-    /* Change background color on hover */
-    background-color: #17406a8a;
-  }
-  .navbar-light  .navbar-nav .nav-link {
-    color:white
-  }
-  a{
-    color: white;
-    padding:2px;
-  }
-  a:hover{
-    color:lightblue;
-    cursor: pointer;
-  }
-  /* a:active {
-    background-color: #007bff; 
-    color: #fff;
-    border-radius: 5px; 
-    text-decoration: underline;
-  } */
-  .navbar-light .navbar-nav .show > .nav-link,
-  .navbar-light .navbar-nav .nav-link.active {
+.dropdown-menu {
+  padding: 1rem;
+  font-size: 1rem;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  top: calc(100% - 2px) !important;
+  backdrop-filter: blur(15px);
+}
 
-    text-decoration: underline;
-    color: #03a9f4;
-  }
-  ul.dropdown-menu.notifications{
-    width: 400px;
-    max-height: 600px;
-    overflow-y: scroll;
-  }
+.jobs-submenu .dropdown-item {
+  margin-bottom: 3px;
+  transition: background-color 0.3s ease-in-out;
+  color: "black";
+}
+
+.dropdown-item:hover {
+  background-color: #17406a8a;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+a {
+  color: white;
+  padding: 2px;
+}
+a:hover {
+  color: lightblue;
+  cursor: pointer;
+}
+
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .nav-link.active {
+  text-decoration: underline;
+  color: #03a9f4;
+}
+ul.dropdown-menu.notifications {
+  width: 400px;
+  max-height: 600px;
+  overflow-y: scroll;
+}
